Package.json Corrigido

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Just-Do-It",
+  "name": "just-do-it",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/Nikolasyuri/Just-Do-It.git",
