--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "repository": "https://github.com/Nikolasyuri/Just-Do-It.git",
   "author": "Nikolasyuri <nikolasyuri@hotmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7"
+  "devDependencies": {
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-transform-async-to-generator": "^7.14.5",
+    "@babel/preset-env": "^7.14.8",
+    "webpack": "^5.47.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "dev": "babel ./script.js -o ./bundle.js -w"
+    "dev": "webpack server",
+    "build": "webpack --mode=production"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "babel-loader": "^8.2.2"
   }
 }
